# FieldPilot-ai

./: .env.example  ARCHITECTURE.md  pyproject.toml
app/: composition_root.py  main.py
app/agent/: orchestrator.py  tool_registry.py
app/api/: routes.py  schemas.py
app/domain/: llm_client.py  llm_types.py  models.py  rule_provider.py
app/infrastructure/: config.py  config_rule_provider.py  gemini_llm_client.py  llm_client.py  llm_types.py  logging_setup.py  weather_api_client.py
app/tools/: base.py  calculator_tool.py  risk_assessment_tool.py  weather_tool.py
config/: safety_rules.yaml
tests/integration/: test_composition_root.py  test_health.py  test_weather_tool_integration.py
tests/unit/: test_calculator_tool.py  test_domain_models.py  test_gemini_llm_client.py  test_llm_types.py  test_risk_assessment_tool.py  test_rule_provider.py  test_tool_registry.py  test_weather_api_client.py  test_weather_tool.py
