[project]
name = "fieldpilot-ai"
version = "0.1.0"
description = "Production-shaped AI Operations Assistant for agriculture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.0",
    "google-genai>=2.10.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
]
